[gd_scene load_steps=8 format=2]

[ext_resource path="res://BoardTile.gd" type="Script" id=1]
[ext_resource path="res://img/forest.jpg" type="Texture2D" id=2]
[ext_resource path="res://img/farm.jpg" type="Texture2D" id=3]
[ext_resource path="res://img/laboratory.png" type="Texture2D" id=4]
[ext_resource path="res://img/city.jpg" type="Texture2D" id=5]
[ext_resource path="res://img/edge.png" type="Texture2D" id=6]
[ext_resource path="res://TileButton.gd" type="Script" id=7]

[node name="BoardTile" type="Node2D"]
script = ExtResource( 1 )

[node name="Selected" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 264.0
offset_bottom = 264.0
color = Color( 0.0509804, 0, 0.941176, 1 )

[node name="Button" type="Button" parent="."]
offset_right = 256.0
offset_bottom = 256.0
custom_minimum_size = Vector2( 256, 256 )
script = ExtResource( 7 )

[node name="ForestSprite" type="Sprite2D" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="FarmSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="CitySprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 5 )
centered = false

[node name="LabSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="EdgeSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 6 )
centered = false

[node name="ZombieCounter" type="Label" parent="."]
offset_left = 37.0
offset_top = 231.0
offset_right = 222.0
offset_bottom = 254.0
